sfdx-source/force-app/main/default/objects/Subscription_Rate_Change__c/Subscription_Rate_Change__c.object-meta.xml
<CustomObject>
    <description>LEM-6457-Active Rate Provisioning</description>
    <label>Subscription Rate Change</label>
    <nameField>
        <displayFormat>SubscriptionChange-{0000}</displayFormat>
        <label>Subscription Rate Change  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subscription Rate Changes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>