sfdx-source/force-app/main/default/objects/Subscription_Rate_Change__c/fields/Current_Active_Commission__c.field-meta.xml
<CustomField>
    <fullName>Current_Active_Commission__c</fullName>
    <description>LEM-6457-Active Rate Provisioning</description>
    <formula>Subscription__r.Active_Commission__c</formula>
    <inlineHelpText>This field holds the latest Active Commission value of the Subscription</inlineHelpText>
    <label>Current Active Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>