sfdx-source/force-app/main/default/objects/Subscription_Rate_Change__c/fields/Current_Active_Fee__c.field-meta.xml
<CustomField>
    <fullName>Current_Active_Fee__c</fullName>
    <description>LEM-6457-Active Rate Provisioning</description>
    <formula>Subscription__r.Active_Fee__c</formula>
    <inlineHelpText>This field holds the latest Active fee value of the Subscription</inlineHelpText>
    <label>Current Active Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>