sfdx-source/force-app/main/default/objects/Subscription_Rate_Change__c/fields/Rate_Change_Request__c.field-meta.xml
<CustomField>
    <fullName>Rate_Change_Request__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>LEM-6457-Active Rate Provisioning</description>
    <label>Rate Change Request</label>
    <referenceTo>Rate_Change_Request__c</referenceTo>
    <relationshipLabel>Subscription Rate Changes</relationshipLabel>
    <relationshipName>Subscription_Rate_Changes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>