sfdx-source/force-app/main/default/objects/Subscription_Rate_Change__c/fields/Rate_Change_Request_Status__c.field-meta.xml
<CustomField>
    <fullName>Rate_Change_Request_Status__c</fullName>
    <description>LEM-6457-Active Rate Provisioning</description>
    <formula>TEXT(Rate_Change_Request__r.Status__c)</formula>
    <label>Rate Change Request Status</label>
    <type>Text</type>
</CustomField>