sfdx-source/force-app/main/default/objects/Subscription_Rate_Change__c/fields/Subscription__c.field-meta.xml
<CustomField>
    <fullName>Subscription__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>LEM-6457-Active Rate Provisioning</description>
    <label>Subscription</label>
    <referenceTo>SBQQ__Subscription__c</referenceTo>
    <relationshipLabel>Subscription Rate Changes</relationshipLabel>
    <relationshipName>Subscription_SRC</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>