sfdx-source/force-app/main/default/objects/Subscription_Rate_Change__c/fields/Update_complete__c.field-meta.xml
<CustomField>
    <fullName>Update_complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-6457-Active Rate Provisioning</description>
    <label>Update complete</label>
    <type>Checkbox</type>
</CustomField>