sfdx-source/force-app/main/default/objects/Subscription_Rate_Change__c/fields/Updated_Active_Commission__c.field-meta.xml
<CustomField>
    <fullName>Updated_Active_Commission__c</fullName>
    <description>LEM-6457-Active Rate Provisioning</description>
    <label>Updated Active Commission</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>