sfdx-source/force-app/main/default/objects/Subscription_Rate_Change__c/fields/Updated_Active_Fee__c.field-meta.xml
<CustomField>
    <fullName>Updated_Active_Fee__c</fullName>
    <description>LEM-6457-Active Rate Provisioning</description>
    <label>Updated Active Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>