sfdx-source/force-app/main/default/objects/Subscription_Rate_Change__c/validationRules/RestrictUpdate_To_Required_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>RestrictUpdate_To_Required_Fields</fullName>
    <active>true</active>
    <description>LEM-13365 Restrict updates on fields once record is created.</description>
    <errorConditionFormula>AND(
NOT(ISNEW()),
$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
OR(
ISCHANGED(Rate_Change_Request__c),
ISCHANGED(Subscription__c)
)
)</errorConditionFormula>
    <errorMessage>You cannot edit the Subscription and Rate Change Request once the record is created.</errorMessage>
</ValidationRule>